Separate training úing symmetric graph and asymetric graph derived from SSP.

--- a/train/tsp/atsp.ipynb
+++ b/train/tsp/atsp.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0828749e",
    "metadata": {},
    "outputs": [
@@ -76,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "90fe6f8c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_callback = ModelCheckpoint(  dirpath=\"checkpoints_tsp\", # save to checkpoints/\n",
-    "                                        filename=\"epoch_{epoch:03d}\",  # save as epoch_XXX.ckpt\n",
+    "checkpoint_callback = ModelCheckpoint(  dirpath=\"checkpoints_atsp\", # save to checkpoints/\n",
+    "                                        filename=\"atsp{epoch:03d}\",  # save as epoch_XXX.ckpt\n",
     "                                        save_top_k=1, # save only the best model\n",
     "                                        save_last=True, # save the last model\n",
     "                                        monitor=\"val/cost_bsf\", # monitor validation reward\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "be470385",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>wandb_logs/wandb/run-20250625_002323-v5d4z2ws</code>"
+       "Run data is saved locally in <code>wandb_logs/wandb/run-20250625_111310-02auw60u</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -186,7 +186,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/shoraaa-vnu/rl4co/runs/v5d4z2ws' target=\"_blank\">atsp_positional_bias</a></strong> to <a href='https://wandb.ai/shoraaa-vnu/rl4co' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+       "Syncing run <strong><a href='https://wandb.ai/shoraaa-vnu/rl4co/runs/02auw60u' target=\"_blank\">atsp</a></strong> to <a href='https://wandb.ai/shoraaa-vnu/rl4co' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -210,7 +210,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/shoraaa-vnu/rl4co/runs/v5d4z2ws' target=\"_blank\">https://wandb.ai/shoraaa-vnu/rl4co/runs/v5d4z2ws</a>"
+       " View run at <a href='https://wandb.ai/shoraaa-vnu/rl4co/runs/02auw60u' target=\"_blank\">https://wandb.ai/shoraaa-vnu/rl4co/runs/02auw60u</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -232,7 +232,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d53cda13f894f71ac68323da338d66c",
+       "model_id": "54d9233176834dc19c504d77bdc3bac6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -249,7 +249,7 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
        "┃<span style=\"font-weight: bold\">        Test metric        </span>┃<span style=\"font-weight: bold\">       DataLoader 0        </span>┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-       "│<span style=\"color: #008080; text-decoration-color: #008080\">       test/cost_bsf       </span>│<span style=\"color: #800080; text-decoration-color: #800080\">     7.395672798156738     </span>│\n",
+       "│<span style=\"color: #008080; text-decoration-color: #008080\">       test/cost_bsf       </span>│<span style=\"color: #800080; text-decoration-color: #800080\">     7.351276874542236     </span>│\n",
        "└───────────────────────────┴───────────────────────────┘\n",
        "</pre>\n"
       ],
@@ -257,7 +257,7 @@
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
        "┃\u001b[1m \u001b[0m\u001b[1m       Test metric       \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      DataLoader 0       \u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-       "│\u001b[36m \u001b[0m\u001b[36m      test/cost_bsf      \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m    7.395672798156738    \u001b[0m\u001b[35m \u001b[0m│\n",
+       "│\u001b[36m \u001b[0m\u001b[36m      test/cost_bsf      \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m    7.351276874542236    \u001b[0m\u001b[35m \u001b[0m│\n",
        "└───────────────────────────┴───────────────────────────┘\n"
       ]
      },
@@ -267,7 +267,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'test/cost_bsf': 7.395672798156738}]"
+       "[{'test/cost_bsf': 7.351276874542236}]"
       ]
      },
      "execution_count": 6,
@@ -290,7 +290,7 @@
      "output_type": "stream",
      "text": [
       "Overriding gradient_clip_val to None for 'automatic_optimization=False' models\n",
-      "/home/shora/Research/rl4co/.venv/lib/python3.13/site-packages/lightning/pytorch/callbacks/model_checkpoint.py:658: Checkpoint directory /home/shora/Research/rl4co/checkpoints_tsp exists and is not empty.\n",
+      "/home/shora/Research/rl4co/.venv/lib/python3.13/site-packages/lightning/pytorch/callbacks/model_checkpoint.py:658: Checkpoint directory /home/shora/Research/rl4co/train/checkpoints_tsp exists and is not empty.\n",
       "val_file not set. Generating dataset instead\n",
       "test_file not set. Generating dataset instead\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
@@ -304,9 +304,9 @@
        "┃<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">    </span>┃<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\"> Name                            </span>┃<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\"> Type                       </span>┃<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\"> Params </span>┃<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\"> Mode  </span>┃\n",
        "┡━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━╇━━━━━━━┩\n",
        "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 0  </span>│ env                             │ ATSPkoptEnv                │      0 │ train │\n",
-       "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 1  </span>│ policy                          │ NeuOptPolicy               │  679 K │ train │\n",
-       "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 2  </span>│ policy.encoder                  │ N2SEncoder                 │  333 K │ train │\n",
-       "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 3  </span>│ policy.encoder.init_embedding   │ CustomizeATSPInitEmbedding │  5.2 K │ train │\n",
+       "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 1  </span>│ policy                          │ NeuOptPolicy               │  693 K │ train │\n",
+       "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 2  </span>│ policy.encoder                  │ N2SEncoder                 │  347 K │ train │\n",
+       "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 3  </span>│ policy.encoder.init_embedding   │ CustomizeATSPInitEmbedding │ 19.2 K │ train │\n",
        "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 4  </span>│ policy.encoder.pos_embedding    │ CyclicPositionalEmbedding  │      0 │ train │\n",
        "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 5  </span>│ policy.encoder.pos_net          │ MultiHeadCompat            │ 32.8 K │ train │\n",
        "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 6  </span>│ policy.encoder.net              │ AdaptiveSequential         │  295 K │ train │\n",
@@ -340,9 +340,9 @@
        "┃\u001b[1;35m \u001b[0m\u001b[1;35m  \u001b[0m\u001b[1;35m \u001b[0m┃\u001b[1;35m \u001b[0m\u001b[1;35mName                           \u001b[0m\u001b[1;35m \u001b[0m┃\u001b[1;35m \u001b[0m\u001b[1;35mType                      \u001b[0m\u001b[1;35m \u001b[0m┃\u001b[1;35m \u001b[0m\u001b[1;35mParams\u001b[0m\u001b[1;35m \u001b[0m┃\u001b[1;35m \u001b[0m\u001b[1;35mMode \u001b[0m\u001b[1;35m \u001b[0m┃\n",
        "┡━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━╇━━━━━━━┩\n",
        "│\u001b[2m \u001b[0m\u001b[2m0 \u001b[0m\u001b[2m \u001b[0m│ env                             │ ATSPkoptEnv                │      0 │ train │\n",
-       "│\u001b[2m \u001b[0m\u001b[2m1 \u001b[0m\u001b[2m \u001b[0m│ policy                          │ NeuOptPolicy               │  679 K │ train │\n",
-       "│\u001b[2m \u001b[0m\u001b[2m2 \u001b[0m\u001b[2m \u001b[0m│ policy.encoder                  │ N2SEncoder                 │  333 K │ train │\n",
-       "│\u001b[2m \u001b[0m\u001b[2m3 \u001b[0m\u001b[2m \u001b[0m│ policy.encoder.init_embedding   │ CustomizeATSPInitEmbedding │  5.2 K │ train │\n",
+       "│\u001b[2m \u001b[0m\u001b[2m1 \u001b[0m\u001b[2m \u001b[0m│ policy                          │ NeuOptPolicy               │  693 K │ train │\n",
+       "│\u001b[2m \u001b[0m\u001b[2m2 \u001b[0m\u001b[2m \u001b[0m│ policy.encoder                  │ N2SEncoder                 │  347 K │ train │\n",
+       "│\u001b[2m \u001b[0m\u001b[2m3 \u001b[0m\u001b[2m \u001b[0m│ policy.encoder.init_embedding   │ CustomizeATSPInitEmbedding │ 19.2 K │ train │\n",
        "│\u001b[2m \u001b[0m\u001b[2m4 \u001b[0m\u001b[2m \u001b[0m│ policy.encoder.pos_embedding    │ CyclicPositionalEmbedding  │      0 │ train │\n",
        "│\u001b[2m \u001b[0m\u001b[2m5 \u001b[0m\u001b[2m \u001b[0m│ policy.encoder.pos_net          │ MultiHeadCompat            │ 32.8 K │ train │\n",
        "│\u001b[2m \u001b[0m\u001b[2m6 \u001b[0m\u001b[2m \u001b[0m│ policy.encoder.net              │ AdaptiveSequential         │  295 K │ train │\n",
@@ -377,20 +377,20 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Trainable params</span>: 819 K                                                                                            \n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Trainable params</span>: 833 K                                                                                            \n",
        "<span style=\"font-weight: bold\">Non-trainable params</span>: 0                                                                                            \n",
-       "<span style=\"font-weight: bold\">Total params</span>: 819 K                                                                                                \n",
+       "<span style=\"font-weight: bold\">Total params</span>: 833 K                                                                                                \n",
        "<span style=\"font-weight: bold\">Total estimated model params size (MB)</span>: 3                                                                          \n",
-       "<span style=\"font-weight: bold\">Modules in train mode</span>: 93                                                                                          \n",
+       "<span style=\"font-weight: bold\">Modules in train mode</span>: 94                                                                                          \n",
        "<span style=\"font-weight: bold\">Modules in eval mode</span>: 0                                                                                            \n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1mTrainable params\u001b[0m: 819 K                                                                                            \n",
+       "\u001b[1mTrainable params\u001b[0m: 833 K                                                                                            \n",
        "\u001b[1mNon-trainable params\u001b[0m: 0                                                                                            \n",
-       "\u001b[1mTotal params\u001b[0m: 819 K                                                                                                \n",
+       "\u001b[1mTotal params\u001b[0m: 833 K                                                                                                \n",
        "\u001b[1mTotal estimated model params size (MB)\u001b[0m: 3                                                                          \n",
-       "\u001b[1mModules in train mode\u001b[0m: 93                                                                                          \n",
+       "\u001b[1mModules in train mode\u001b[0m: 94                                                                                          \n",
        "\u001b[1mModules in eval mode\u001b[0m: 0                                                                                            \n"
       ]
      },
@@ -400,7 +400,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76fbe50ed8a044849ab109c69f6526f8",
+       "model_id": "ccefc5c33ef949c2818838309a1d049a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -423,7 +423,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6eeaa70599fb4f99ac0e027433107365",
+       "model_id": "827ee75c70b44292a521b56557df1004",
        "version_major": 2,
        "version_minor": 0
       },
@@ -437,7 +437,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f50d2b2fe4d4a3998470edb918d3433",
+       "model_id": "bef83ef5dd0e4ea785878407419ce7d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -451,7 +451,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f2aa69125194b0d9576d97d28345d00",
+       "model_id": "bca7d4140f394e47a2407fa93b6e4987",
        "version_major": 2,
        "version_minor": 0
       },
@@ -465,161 +465,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e9e26d0833b45cfb847053468756f65",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: |          | 0/? [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d1cc2b833114c239c49588d06d990c9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: |          | 0/? [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b0013f14f424293920df039b868615d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: |          | 0/? [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab94032d48314b4e958e8ec26c5b9593",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: |          | 0/? [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4d236d4a2a048a9ba397313929f2040",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: |          | 0/? [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "861c68fc3060419d8cfea83c27dd9770",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: |          | 0/? [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b26bd9b85311441a805a02b1f1cbce82",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: |          | 0/? [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48d21deba21e409192d625f93bf78902",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: |          | 0/? [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d530fe24b6cc4337a9ab1657fd0ae1a7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: |          | 0/? [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e352b8c1fad4008a44efdada6a36d08",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: |          | 0/? [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45928e21b5744768bc72c8ef144f52c3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: |          | 0/? [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9e8ad3415924c39989bb53c6c7dca24",
+       "model_id": "89c4004de48c4136887c2442165c655a",
        "version_major": 2,
        "version_minor": 0
       },
