--- a/train/ssp/atsp_ln_pc_ae.ipynb
+++ b/train/ssp/atsp_ln_pc_ae.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "beee891e",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
     "        super(CustomizeATSPInitEmbedding, self).__init__()\n",
     "        node_dim = num_loc\n",
     "        self.init_embed = nn.Sequential(\n",
-    "            # nn.LayerNorm(node_dim),\n",
+    "            nn.LayerNorm(node_dim),\n",
     "            nn.Linear(node_dim, embed_dim),\n",
     "            nn.ReLU(),\n",
     "            nn.Linear(embed_dim, embed_dim),\n",
@@ -58,11 +58,11 @@
     "        out = self.encoder(cost_embed)  # Inject global context\n",
     "        return cost_embed\n",
     "\n",
-    "num_loc = 20  # Number of strings\n",
+    "num_loc = 10  # Number of strings\n",
+    "fixed_len = 15\n",
     "embed_dim = 128  # Dimension of the embedding space\n",
     "\n",
-    "gen = ATSPCoordGenerator(num_loc=num_loc, init_sol_type=\"random\", seed=42)\n",
-    "env = ATSPkoptEnv(generator=gen, k_max=4)\n",
+    "env = SSPkoptEnv(generator_params=dict(num_loc=num_loc, fixed_len=fixed_len, init_sol_type=\"random\"), k_max=4)\n",
     "model = NeuOpt(\n",
     "        env,\n",
     "        batch_size=128,\n",
@@ -87,8 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_callback = ModelCheckpoint(  dirpath=\"checkpoints_tsp\", # save to checkpoints/\n",
-    "                                        filename=\"atsp_pc_ae{epoch:03d}\",  # save as epoch_XXX.ckpt\n",
+    "checkpoint_callback = ModelCheckpoint(  dirpath=\"checkpoints_atsp\", # save to checkpoints/\n",
+    "                                        filename=\"atsp_ln_pc_ae{epoch:03d}\",  # save as epoch_XXX.ckpt\n",
     "                                        save_top_k=1, # save only the best model\n",
     "                                        save_last=True, # save the last model\n",
     "                                        monitor=\"val/cost_bsf\", # monitor validation reward\n",
@@ -102,20 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "be470385",
    "metadata": {},
    "outputs": [],
    "source": [
     "from lightning.pytorch.loggers import WandbLogger\n",
-    "logger = WandbLogger(project=\"rl4co\", name=\"atsp_pc_ae\", log_model=True, save_dir=\"wandb_logs\")\n",
+    "logger = WandbLogger(project=\"rl4co\", name=\"atsp_ln_pc_ae\", log_model=True, save_dir=\"wandb_logs\")\n",
     "\n",
     "#  logger = None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "24d88038",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9da24d18",
    "metadata": {},
    "outputs": [
@@ -250,6 +250,37 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
+       "┃<span style=\"font-weight: bold\">        Test metric        </span>┃<span style=\"font-weight: bold\">       DataLoader 0        </span>┃\n",
+       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
+       "│<span style=\"color: #008080; text-decoration-color: #008080\">       test/cost_bsf       </span>│<span style=\"color: #800080; text-decoration-color: #800080\">     7.461929798126221     </span>│\n",
+       "└───────────────────────────┴───────────────────────────┘\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
+       "┃\u001b[1m \u001b[0m\u001b[1m       Test metric       \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      DataLoader 0       \u001b[0m\u001b[1m \u001b[0m┃\n",
+       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
+       "│\u001b[36m \u001b[0m\u001b[36m      test/cost_bsf      \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m    7.461929798126221    \u001b[0m\u001b[35m \u001b[0m│\n",
+       "└───────────────────────────┴───────────────────────────┘\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'test/cost_bsf': 7.461929798126221}]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -377,7 +408,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c9be5de40c44fcea3f0620faeda526d",
+       "model_id": "5fed082dfb8c459db26ebf6687dfddc7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -400,7 +431,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "445e826e7bdc44a1a1a00daaea0c801e",
+       "model_id": "33bcd59185704267ba944dbc6304f4b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -414,7 +445,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9066adfd48874dcaa1b9930250f16378",
+       "model_id": "60e1a16a229c4bdc9b0a9af4ec6c1e81",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: |          | 0/? [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a220a5d846b644baae8b4d667996c22c",
        "version_major": 2,
        "version_minor": 0
       },
